# products-fastapi-app

./: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  pyproject.toml  start.sh
.github/: copilot-instructions.md
app/: config.py  database.py  main.py
app/exceptions/: __init__.py  product_exceptions.py
app/models/: product.py
app/repositories/: __init__.py  product_repository.py
app/routers/: products.py
app/schemas/: product.py
app/services/: product_service.py
implementations/: IMPLEMENTATION.md  original-prompt.md
prompts/: code-review.prompt.md  debug-analysis.prompt.md  feature-implementation.prompt.md  security-audit.prompt.md
reference/: links.md  notes.md
tests/: conftest.py
tests/e2e/: __init__.py  test_product_e2e.py
tests/integration/: test_product_api.py
tests/unit/: test_product_service.py
